--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,49 @@ body {
     text-wrap: balance;
   }
 }
+
+
+/* debugging border classes */
+@layer components {
+  .bred {
+    @apply border-2 border-red-500
+  }
+  .bgreen {
+    @apply border-2 border-green-500
+  }
+  .bblue {
+    @apply border-2 border-blue-500
+  }
+  .byellow {
+    @apply border-2 border-yellow-500
+  }
+  .bpurple {
+    @apply border-2 border-purple-500
+  }
+  .bblack {
+    @apply border-2 border-black
+  }
+  .bwhite {
+    @apply border-2 border-white
+  }
+}
+ 
+ /* css boilerplate contants*/
+ @layer base {
+   body {
+     @apply bg-[#121821] text-white flex justify-center
+   }
+ }
+ 
+ @layer components {
+   .wrapper {
+     @apply max-w-screen-xl w-full h-screen flex flex-col
+   }
+   .heading {
+     @apply text-4xl font-medium py-3
+   }
+   .paragraph {
+     @apply py-3
+   }
+ }
+ 
